# Submodular-Optmization-Research

./: no_predictions.py  querier.py  test.txt
Greedy/: Makefile  greedy  greedy.cpp  greedy.h  main.cpp  zfun.cpp  zfun.h
InfluenceMaximization/: &1  a.out  all_bygenre_best_gaps.txt  choices.txt  compute_best_gap.py  degreeDiscount  degreeDiscount.cpp  degreeDiscount2  degreeDiscount_DDandOH  degreeDiscount_DDonly  degreeDiscount_GEM  degreeDiscount_IMMonly  degreeDiscount_OHonly  gaps.txt  gaps_50.txt  gethighestgaps.py  log_netphy_10  logs.txt  logs_coverage.txt  output_all_of_them.out  readerHelper.cpp  run_bygenre_best_gaps.sh  runner_script.sh  runner_script_bygenre.sh  runner_script_bygenre_50.sh  runner_script_with_coverage.sh  sorted_gaps.txt
InfluenceMaximization/capngraph-master/: Cargo.toml
InfluenceMaximization/capngraph-master/data/text/: CA-HepTh-din.txt  Wiki-Vote_ic.txt  ratings_1m_12permovies.txt  ratings_1m_25p_movies.txt  ratings_1m_25permovies.txt  ratings_1m_3topbottom.txt  ratings_1m_625permovies.txt  ratings_1m_bottom5.txt
InfluenceMaximization/capngraph-master/data/text/ml-latest-small-txt/: a.out  ratings.txt  ratings_inv.txt  swapper.cpp
InfluenceMaximization/capngraph-master/src/: lib.rs
Inputs/: generator  input_generator.cpp  inputs_no_predictions.txt
OptimalHints/: MainRunner.sh  Result.txt  a.out  g_marginal_gain.in  greedy  greedy_factors.in  history.out  history_100_percent_bad_ps.out  history_30.out  history_all_ops.out  input.in  instances_20.out  instances_30.out  instances_40.out  instances_50.out  instances_60.out  (+6 more)
(+638 files in other folders)
