[package]
authors = ["J David Smith <emallson@atlanis.net>"]
build = "build.rs"
license = "BSD-3-Clause"
name = "capngraph"
version = "0.3.2"

[build-dependencies]
capnpc = "0.12"

[dependencies]
capnp = "0.12"
petgraph = "0.4.1"
bit-set = { version = "0.4", optional = true }
colored = { version = "1.4.1", optional = true }
docopt = { version = "1", optional = true }
serde = { version = "1.0", features=["derive"] , optional=true}
serde_json = { version = "1", optional = true }

[features]
default = []
bins = ["bit-set", "colored", "docopt", "serde", "serde_json"]
serde = ["dep:serde"]

[[bin]]
name = "convert"
path = "src/bin/convert.rs"
required-features = ["bins"]

[[bin]]
name = "deconvert"
path = "src/bin/deconvert.rs"
required-features = ["bins"]

[[bin]]
name = "describe-graph"
path = "src/bin/describe-graph.rs"
required-features = ["bins"]
